2002-11-23  Neal H. Walfield  <neal@cs.uml.edu>

	* Makefile.am (libassuan_a_SOURCES): Add assuan-io.c.
	* assuan-io.c: Restore.
	(_assuan_simple_read): Rename from _assuan_read.
	(_assuan_simple_write): Rename from _assuan_write.
	* assuan-defs.h (_assuan_simple_read): New prototype.
	(_assuan_simple_write): Likewise.
	* assuan-pipe-server.c (pipe_reader): Remove.
	(pipe_writer): Remove.
	(_assuan_new_context): Initialize IO is with _assuan_simple_read
	and _assuan_simple_write.
	* assuan-socket-connect.c (socket_reader): Remove.
	(socket_writer): Remove.
	(assuan_socket_connect): Initialize IO is with _assuan_simple_read
	and _assuan_simple_write.
	* assuan-socket-server.c (io): New local variable.
	(assuan_init_socket_server): Initialize CTX->io.
	(assuan_init_connected_socket_server): Likewise.

2002-11-23  Neal H. Walfield  <neal@g10code.de>

	* assuan-buffer.c (readline): Use memrchr.
	(_assuan_read_line): Rewritten to use the string functions.

2002-11-20  Neal H. Walfield  <neal@g10code.de>

	* assuan-socket-connect.c (assuan_socket_connect): Pass PF_LOCAL
	to socket(), not AF_UNIX: it expects a PF_* macro and the former
	is more portable.
	(assuan_socket_connect): Use AF_LOCAL, not AF_UNIX which is more
	POSIXy.

2002-11-20  Neal H. Walfield  <neal@g10code.de>

	* assuan-defs.h (struct assuan_io): New structure.
	(struct assuan_context_s): New field, io.
	(_assuan_read): Depreciated.
	(_assuan_write): Likewise.
	* assuan-pipe-server.c: Include <unistd.h>.
	(pipe_reader): New function.
	(pipe_writer): Likewise.
	(_assuan_new_context.IO): New local static.  Set to pipe_reader
	and pipe_writer.  Use it to initialize new context.
	* assuan-socket-connect.c (socket_reader): New function.
	(socket_writer): New function.
	(assuan_socket_connect.IO): New local static.  Set to socket_reader
	and socket_writer.  Use it to initialize new context.
	* assuan-buffer.c (writen): Take an ASSUAN_CONTEXT rather than a