@@ -1,4 +1,15 @@
-2002-11-23  Neal H. Walfield  <neal@cs.uml.edu>
+2002-11-24  Neal H. Walfield  <neal@g10code.de>
+
+	* assuan.h: Add prototype for assuan_domain_connect and
+	assuan_init_domain_server.
+	* assuan-defs.h: Include <unistd.h>.
+	Add prototype for _assuan_domain_init.
+	* assuan-domain-connect.c: New file.
+	* assuan-domain-server.c: New file.
+	* Makefile.am (libassuan_a_SOURCES): Add assuan-domain-connect.c
+	and assuan-domain-server.c
+
+2002-11-23  Neal H. Walfield  <neal@g10code.de>
 
 	* Makefile.am (libassuan_a_SOURCES): Add assuan-io.c.
 	* assuan-io.c: Restore.
